--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,15 @@ services:
     depends_on: 
       postgres:
         condition: service_started
+  nginx: 
+    container_name: ltdb-nginx
+    restart : always
+    build : 
+      context : ./frontend
+      dockerfile : ./Dockerfile
+    ports : 
+      - 80:80
+  
       
 volumes: 
   postgres:
