--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,10 +1,21 @@
 server {
+    listen 80; 
+    server_name ltdb-nginx;
     location / {
+        root /usr/share/nginx/html;
+        # try_files $url /index.html;
+    }
+    location /ltms {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass http://rest:2008;
+        proxy_pass http://ltdb-rest:2008/;
+        proxy_ssl_session_reuse off;
+        proxy_set_header Host $http_host;
+        proxy_cache_bypass $http_upgarade;
+        proxy_redirect off;
     }
 }
