--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,8 +1,9 @@
 server {
     listen 80; 
-    server_name ltdb-nginx;
+    # listen 443 ssl;
+    # server_name www.lantabur.sch.id;
     location / {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/;
         # try_files $url /index.html;
     }
     location /ltms {
@@ -13,6 +14,7 @@ server {
         proxy_set_header X-NginX-Proxy true;
 
         proxy_pass http://ltdb-rest:2008/;
+        # proxy_pass http://localhost:2008/;
         proxy_ssl_session_reuse off;
         proxy_set_header Host $http_host;
         proxy_cache_bypass $http_upgarade;
