nginx re-config again

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,7 +1,9 @@
 
-include /etc/nginx/moduled-enabled/*.conf;
 
-http {
+# pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
+
+# http {
 
     server {
         listen 80; 
@@ -36,4 +38,4 @@ http {
         #     # proxy_redirect off;
         # }
     }
-}
+# }
