nginx re-config backend has been accessed by sub domain

--- a/ltdb-nginx/default.conf
+++ b/ltdb-nginx/default.conf
@@ -1,9 +1,7 @@
-
-
-# pid /run/nginx.pid;
+pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
-# http {
+http {
 
     server {
         listen 80; 
@@ -38,4 +36,4 @@ include /etc/nginx/modules-enabled/*.conf;
         #     # proxy_redirect off;
         # }
     }
-# }
+}
