--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,30 @@
 version: '3.8'
-services: 
+services:
+  
+  # Reverse Proxy
+  nginx: 
+    image : nginx:mainline-alpine
+    container_name: ltdb-nginx
+    depends_on: 
+      - rest 
+      - postgres
+    volumes : 
+      - ./ltdb-nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports : 
+      - 80:80
+
+  frontend: 
+    image : ltdb-frontend 
+    container_name : ltdb-frontend
+    build : 
+      context : ./frontend-vue
+    depends_on: 
+      - rest
+    ports : 
+      - 8080:80
+    restart : on-failure
+  
+  # Database Postgres
   postgres : 
     image: postgres:13
     container_name: ltdb-postgres
@@ -11,6 +36,7 @@ services:
     volumes: 
       - postgres:/var/lib/postgresql/data
 
+  # Backend
   rest:
     container_name: ltdb-rest
     build: 
@@ -24,16 +50,7 @@ services:
     depends_on: 
       postgres:
         condition: service_started
-  nginx: 
-    container_name: ltdb-nginx
-    restart : always
-    build : 
-      context : ./frontend
-      dockerfile : ./Dockerfile
-    ports : 
-      - 80:80
-  
-      
+
 volumes: 
   postgres:
     name: lantabur-database
