--- a/ltdb-nginx/nginx.conf
+++ b/ltdb-nginx/nginx.conf
@@ -19,11 +19,11 @@ http {
                 proxy_set_header    X-Forwarded-For $remote_addr;
             }
         }
-
+        
         server {
             listen 80; 
             # server_name db.localhost ;
-            server_name ltdb.lantabur.sch.id www.ltdb.lantabur.sch.id;
+            server_name ltdb.lantabur.sch.id www.ltdb.lantabur.sch.id ltdb.lantabur.ip-dynamic.com www.ltdb.lantabur.ip-dynamic.com;
             
             location / {
                 proxy_pass          http://ltdb-rest:2008/;
