Fixing backend looping in seeder

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,6 @@ RUN yarn
 
 EXPOSE 2008
 
-CMD [ "/bin/ash", "-c", "yarn run prisma migrate deploy && yarn run ts-node ./prisma/seed.ts && yarn run dev"]
+CMD [ "/bin/ash", "-c", "yarn prisma generate && yarn prisma migrate deploy && yarn run dev"]
 # CMD [ "/bin/ash", "-c", "yarn run dev"]
 # CMD [ "/bin/ash", "-c", "yarn run prisma db push --accept-data-loss && yarn run dev  "]
