fixing NGINX server_name

--- a/ltdb-nginx/nginx.conf
+++ b/ltdb-nginx/nginx.conf
@@ -10,8 +10,8 @@ events {
 http {
         server {
             listen 80;
-            server_name localhost 127.0.0.1;
-            # server_name www.lantabur.sch.id lantabur.sch.id lantabur.ip-dynamic.com www.lantabur.ip-dynamic.com;
+            # server_name localhost 127.0.0.1;
+            server_name www.lantabur.sch.id lantabur.sch.id lantabur.ip-dynamic.com www.lantabur.ip-dynamic.com;
 
             location / {
                 proxy_pass          http://ltdb-frontend:80;
@@ -21,8 +21,8 @@ http {
 
         server {
             listen 80; 
-            server_name db.localhost ;
-            # server_name ltdb.lantabur.sch.id www.ltdb.lantabur.sch.id ltdb.ip-dynamic.com www.ltdb.ip-dynamic.com;
+            # server_name db.localhost ;
+            server_name ltdb.lantabur.sch.id www.ltdb.lantabur.sch.id ltdb.ip-dynamic.com www.ltdb.ip-dynamic.com;
             
             location / {
                 proxy_pass          http://ltdb-rest:2008/;
