Fixing check token

--- a/backend/.env
+++ b/backend/.env
@@ -5,8 +5,8 @@ POSTGRES_DB=lantabur-database
 DB_PORT=5432
 DB_SCHEMA=lantabur-database
 
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=${DB_SCHEMA}
-# DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=${DB_SCHEMA}
+# DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=${DB_SCHEMA}
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=${DB_SCHEMA}
 
 TZ="Asia/Bangkok"
 
