--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       with:
-          host: ${{ secrets.LTMS_IP-DYNAMIC_URL }}
+          host: ${{ secrets.LTMS_IP_DYNAMIC_URL }}
           username: ${{ secrets.LTMS_USERNAME }}
           key: ${{ secrets.LTMS_KEY }}
           port: 22
