--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        - name: Build the Docker image
+        - name: Build the Docker imageoeu
           uses: appleboy/ssh-action@master
           with:
               host: ${{ secrets.LTMS_IP_DYNAMIC_URL }}
